README edited online with Bitbucket

--- a/README
+++ b/README
@@ -1,14 +1,20 @@
-INSTALL
--------
-python setup.py build
-python setup.py install
+Install
+-----------
+ python setup.py build
+
+ python setup.py install
+
+
+**Note**:
 
 To install to a local set of python libraries
 use --home=/PATH/TO/LOCAL/LIBRARY
 
-REQUIRED PACKAGES
------------------
-SpliceGrapher
-scipy
-pysam
-matplotlib
+Required Packages
+-------------------------
+
+- SpliceGrapher
+- SciPy
+- Pysam
+- matplotlib
+- NumPy
