--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Developed for Python 2.x--refactor in progress
+Developed for Python 2.x--refactor in progress (2024 branch)
 
 Install
 -----------
