--- a/README
+++ b/README
@@ -6,7 +6,6 @@ iDiffIR identifies differential intron retention from RNA-seq data.
 
 Python 2 is **formally dropped**. This project supports Python:
 
-- 3.9
 - 3.10
 - 3.11
 - 3.12
@@ -16,7 +15,7 @@ Python 2 is **formally dropped**. This project supports Python:
 ### One-time setup
 
 ```bash
-uv sync --extra dev
+uv sync --group dev
 ```
 
 This creates/uses a local virtual environment and installs project + development dependencies from `uv.lock`.
@@ -47,8 +46,7 @@ The project uses PEP 621 metadata in `pyproject.toml` with the `setuptools.build
 
 Runtime dependencies are declared in `project.dependencies`, with optional groups in:
 
-- `project.optional-dependencies.dev`
-- `project.optional-dependencies.test`
+- `[dependency-groups].dev`
 
 ## Release Notes
 
